# mangaEasy

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  START_HERE.md  THIRD_PARTY_NOTICES.md  config.example.json  config.system.example.json  mcp.example.json  pyproject.toml  run.bat  run.sh
.claude/skills/manga-recap/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/commands/: config.rs  runner.rs
desktop/: electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  run.sh
desktop/scripts/: bundle-backend.mjs
desktop/src/main/: config.ts  index.ts  ipc-handlers.ts  jobs.ts  log.ts  paths.ts  progress.ts  settings.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/: index.html
desktop/src/shared/: types.ts
docs/: ai-cli-plan.md  ai-guide.md  ai-story-art-style.md  app.md  architecture.md  external-tools.md  install-tools.md  install.md  local-llm.md  manga-video-guide.md  multi-agent.md  production-audit.md  production-plan.md  publishing.md  recap-video-playbook.md  setup.md  thumbnail.md  youtube.md
docs/operate/: crop-verify-narrate.md
mangaeasy/: __init__.py  brand.py  cli.py  command_spec.py  config.py  defaults.py  jobs.py  library_scan.py  mcp_server.py  modes.py  path_safety.py  paths.py  qa_loop.py  series_plan.py  workboard.py
mangaeasy/assets/config/: config.system.example.json
mangaeasy/assets/fonts/: README.md
mangaeasy/assets/prompts/: narration.md
mangaeasy/assets/templates/: app.html  cut_page.html  edit_pdf.html  editor.html  narration_editor.html  narration_editor_all.html  narration_review.html
mangaeasy/assets/tools/: batch_detect_magi.py  detect_magi.py  generate_ace_step.py  generate_zimage.py  separate_demucs.py  transcribe_whisperx.py
mangaeasy/audio/: README.md  emotion.py  fade.py  normalize_chapter.py  tts.py  tts_f5tts.py  tts_pipeline.py  tts_pipeline_f5tts.py
mangaeasy/download/: README.md  mangadex.py
mangaeasy/images/: README.md  ai_zip.py  ai_zip_cli.py  convert.py  pdf.py  pdf_lossless.py  thumbnail_compose.py  watermark.py  watermark_util.py
mangaeasy/narration/: __init__.py  backup.py  clean.py  join.py  normalize.py  rename_file.py
mangaeasy/ocr/: README.md  __init__.py  deepseek_ocr2_pipeline.py  got_ocr2_pipeline.py  ocr_clean.py  panel_transcript.py  vision_pipeline.py
mangaeasy/panels/: README.md  ai.py  cutcheck.py  gutter.py  overrides_tool.py  page.py  process.py  remap.py  style_detect.py  webtoon.py
mangaeasy/song/: README.md  __init__.py  lyrics.py  workflow.py
mangaeasy/story/: README.md  __init__.py  workflow.py
mangaeasy/tools/: README.md  __init__.py  ace_step.py  deepseek_ocr2.py  demucs.py  external.py  f5_tts.py  hardware.py  index_tts.py  install.py  setup.py  smoke.py  vendored.py  whisperx.py  zimage.py
mangaeasy/utils/: __init__.py  clean_chapter.py  fix_name.py  increment.py  init_chapter.py  reset.py
mangaeasy/video/: __init__.py  add_bg.py  blur_background.py  join.py  render.py  timestamps.py
mangaeasy/video_pipeline/: README.md  add_long_video_bgm.py  audio_audit.py  audio_takes.py  check_items.py  cleanup_all.py  cleanup_audio.py  cleanup_videos.py  cleanup_work.py  common.py  ffmpeg_tools.py  generate_audio.py  generate_audio_f5tts.py  generate_audio_indextts.py  item_assets.py  item_video_builder.py  kokoro_batch_worker.py  long_video_builder.py  make_long_video.py  make_videos.py  music_bed.py  narration_check.py  narration_edit.py  narration_sheets.py  normalize_long_audio.py  preprocess_audio_fades.py  run_pipeline.py  validate_generation.py
mangaeasy/web/: app.py  cut_page.py  flask_utils.py  narration_editor.py  narration_editor_all.py  narration_review.py  nicegui_app.py  panel_editor.py
mangaeasy/web/app/: __init__.py  api_fs.py  api_project.py  api_run.py  api_setup.py  api_terminal.py  api_workflow.py  jobs.py  server.py  state.py  window_state.py
mangaeasy/youtube/: README.md  auth.py  delete.py  list_videos.py  store.py  thumbnail.py  upload.py
mediaconductor/: __init__.py  cli.py  command_spec.py  config.py  defaults.py  jobs.py  mcp_server.py  modes.py  qa_loop.py  runtime.py
mediaconductor/assets/prompts/: narration.md
mediaconductor/assist/: README.md  __init__.py  auto.py  characters.py  crop_qa.py  narrate.py
mediaconductor/audio/: README.md  emotion.py  tts_pipeline.py
mediaconductor/download/: mangadex.py
mediaconductor/panels/: cutcheck.py  page.py  style_detect.py  webtoon.py
mediaconductor/tools/: external.py  gemma.py  install.py  setup.py
mediaconductor/video_pipeline/: README.md  add_long_video_bgm.py  generate_audio.py  generate_audio_indextts.py  item_assets.py  item_video_builder.py  long_video_builder.py  run_pipeline.py
packaging/: launcher.py  make_icon.py  mangaeasy.iss  mangaeasy.spec  mediaconductor.spec
scripts/: check_distribution.py  release.py  smoke_mcp.py
skills/ai-story/: SKILL.md
skills/manga-video/: SKILL.md
skills/media-conductor/: SKILL.md
skills/song-video/: SKILL.md
tests/: test_agent_flow.py  test_archive.py  test_assist.py  test_cli.py  test_cli_contract.py  test_cli_editing_tools.py  test_cli_path_safety.py  test_defaults.py  test_demucs_offline.py  test_docs_crossref.py  test_e2e_render.py  test_emotion.py  test_item_selection.py  test_jobs.py  test_library_scan.py  test_long_video_discovery.py  test_long_video_gaps.py  test_long_video_validation.py  test_manga_json.py  test_mcp_server.py  test_modes.py  test_music_bed.py  test_narration_loading.py  test_new_toolchain.py  test_ocr_clean.py  test_packaging_assets.py  test_page_split.py  test_recrop_tools.py  test_repository_hygiene.py  test_resume_pruning.py  test_safety_guards.py  test_song_mode.py  test_story_mode.py  test_tool_env.py  test_vendored_security.py  test_video_pipeline_orchestration.py  test_webtoon_split.py  test_whisperx_offline.py  test_workboard.py  test_workspace_resolution.py  (+2 more)
(+51 files in other folders)
