[project]
name = "mangaeasy"
version = "0.9.27"
description = "General manga and image-to-video automation with isolated external AI tool envs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["manga", "video", "tts", "kokoro", "ffmpeg", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.14.0",
    "flask>=3.0.0",
    "playwright>=1.58.0",
    "pillow>=12.1.1",
    "img2pdf>=0.5.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "pywebview>=5.0",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "flask-sock>=0.2.0",
    "nicegui>=3.1.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.41,<5.0",
    "accelerate>=1.12.0",
    "safetensors>=0.4.0",
    "timm>=0.9.0",
    "einops>=0.8.2",
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "shapely>=2.1.2",
    "matplotlib>=3.10.8",
    "pulp>=3.3.0",
]
whisper = [
    "faster-whisper>=1.2.1",
]
all = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.41,<5.0",
    "accelerate>=1.12.0",
    "safetensors>=0.4.0",
    "timm>=0.9.0",
    "einops>=0.8.2",
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "shapely>=2.1.2",
    "matplotlib>=3.10.8",
    "pulp>=3.3.0",
    "faster-whisper>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mangaeasy"]

[tool.hatch.build.targets.sdist]
include = [
    "/mangaeasy",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
    "/config.example.json",
    "/config.system.example.json",
    "/docs",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[project.scripts]
# A single entry point. Run `mangaeasy --help` to see every subcommand.
mangaeasy = "mangaeasy.cli:main"

[project.urls]
Homepage = "https://github.com/tawhidUnhappy/mangaEasy"
Repository = "https://github.com/tawhidUnhappy/mangaEasy"
Issues = "https://github.com/tawhidUnhappy/mangaEasy/issues"

# Torch resolves from PyPI so the optional `ml` extra installs on any platform
# (Windows/Linux/macOS, CPU or GPU). CUDA-specific torch builds are handled in
# the isolated external tool envs by `mangaeasy install-tool`, never here.
