[package]
name = "mangaeasy"
version = "0.9.27"
edition = "2021"

[lib]
name = "mangaeasy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-opener  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
dirs        = "5"

[profile.dev]
incremental = true

[profile.release]
panic       = "abort"
codegen-units = 1
lto         = true
strip       = true
opt-level   = "s"
